syntax = "proto3";
package customer;

service CustomerService {
    rpc Create(CustomerRequest) returns (CustomerResponse);
    rpc GetCustomerInfo(CustomerID) returns (CustomerInfo);
    rpc UpdateCustomer(CustomerUpdate) returns (CustomerResponse);
    rpc DeleteCustomer(CustomerID) returns (Empty);
    rpc CheckField(CheckFieldReq) returns (CheckFieldResp);
    rpc GetByEmail(EmailReq) returns (LoginResponse);
    rpc GetCustomerBySearchOrder(GetListUserRequest) returns (CustomerAll);
    rpc GetAdmin(GetAdminReq) returns (GetAdminRes);
    rpc GetModerator(GetModeratorReq) returns (GetModeratorRes);
}
message GetModeratorReq {
    string name = 1;
    string password = 2;
}

message GetModeratorRes {
    string id = 1;
    string name = 2;
    string password = 3;
    string access_token = 4;
    string created_at = 5;
    string updated_at = 6;
}

message GetAdminReq {
    string name = 1;
    string password = 2;
}
message GetAdminRes {
    string id = 1;
    string name = 2;
    string password = 3;
    string access_token = 4;
    string created_at = 5;
    string updated_at = 6;

}

message GetListUserRequest {
    int64 limit = 1;
    int64 page = 2;
    Search search = 3;
    Order orders = 4;
}
message Search{
    string field = 1;
    string value = 2;
}
message Order {
    string field = 1;
    string value = 2; // ASC OR DESC
}

message Empty {}
message CustomerAll {
    repeated CustomerListRes customers = 1;
}
message CheckFieldReq {
    string field = 1;
    string value = 2;
}
message CheckFieldResp {
    bool exists = 1;
}
message CustomerID {
    string id = 1;
}
message EmailReq {
    string email = 1;
}

message CustomerRequest{
    string id = 1;
    string full_name = 2;
    string bio = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
    repeated Address addresses = 7;
    string code = 8;
}
message CustomerListRes{
    string full_name = 1;
    string bio = 2;
    string email = 3;
}
message CustomerResponse {
    string id = 1;
    string full_name = 2;
    string bio = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
    string created_at = 7;
    string updated_at = 8;
    repeated Address addresses = 9;
    string access_token = 10;
}
message LoginResponse {
    string id = 1;
    string full_name = 2;
    string bio = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
    string access_token = 7;
    string created_at = 8;
    string updated_at = 9;
    repeated Address addresses = 10;
}

message CustomerUpdate {
    string id = 1;
    string full_name = 2;
    string bio = 3;
    string email = 4;
    string password = 5;
}

message CustomerInfo {
    string id = 1;
    string full_name = 2;
    string bio = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
    string created_at = 7;
    string updated_at = 8;
    repeated Address addresses = 9;
}

message Address {
    string id = 1;
    string owner_id = 2;
    string country = 3;
    string street = 4;
}

message Post{
    string id = 1;
    string owner_id = 2; 
    string name = 3;
    string description = 4;
    repeated Media medias = 5;

}

message Review {
    string id = 1;
    string owner_id = 2;
    string post_id = 3;
    string name = 4;
    int64 rating = 5;
    string description = 6;
}

message Media {
    string id = 1;
    string post_id = 2;
    string name = 3;
    string link = 4;
    string type = 5;
}